[package]
name = "http-rs"
version = "0.1.0"
authors = ["markrepedersen <markrepedersen@gmail.com>"]
edition = "2018"

[dependencies]
strum = "0.19"
strum_macros = "0.19"
nom = "5"
cookie-factory = "0.3"
better-panic = "0.2.0"
rustls = "0.18"
webpki = "0.21"
webpki-roots = "0.20"
flate2 = "1"

[features]
default = []
chunks = []
